--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <p class="service">Paid to Paytm Merchant</p>
                 <p class="name">Kabeer</p>
         </div>
+        <div class="footer">
+            <p class="time"> April 27, 2022 6:49 PM</p>
+            <button>Got it</button>
+        </div>
     </div>
     <img class="gpay-img" src="gpay.png" alt="">
 </body>
