--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
         </div>
     </div>
     <img class="gpay-img" src="gpay.png" alt="">
+    <script src="index.js"></script>
 </body>
 </html>
