--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="home-page">
-        <input type="text" placeholder="Amout">
-        <input type="text" placeholder="Merchant">
-        <input type="text" placeholder="Name">
-        <button>Pay</button>
+        <input class="rupeIn" type="text" placeholder="Amout">
+        <input class="merIn" type="text" placeholder="Merchant">
+        <input class="nameIn" type="text" placeholder="Name">
+        <button onclick="pay()">Pay</button>
     </div>
     <div class="page">
         <div class="circle">
@@ -25,7 +25,7 @@
         </div>
         <div class="footer">
             <p class="time"> April 27, 2022 6:49 PM</p>
-            <button>Got it</button>
+            <button onclick="show()">Got it</button>
         </div>
     </div>
     <!-- <img class="gpay-img" src="gpay.png" alt=""> -->
