--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button onclick="pay()">Pay</button>
     </div>
     <div class="videobox">
-        <video onclick="play()" class="gvideo" src="ganimatoin.mp4"></video>
+        <video onclick="play()" class="gvideo" autoplay loop muted src="ganimatoin.mp4"></video>
     </div>
     <div class="page">
         <div class="circle">
