--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="home-page">
-        <input class="rupeIn" type="text" placeholder="Amout">
+        <input class="rupeIn" type="number" placeholder="Amout">
         <input class="merIn" type="text" placeholder="Merchant">
         <input class="nameIn" type="text" placeholder="Name">
         <button onclick="pay()">Pay</button>
