--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>google pay</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="google.ico" type="image/x-icon">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="google.ico" type="image/x-icon" />
+  </head>
+  <body>
     <div class="home-page">
-        <input class="rupeIn" type="number" placeholder="Amout">
-        <input class="merIn" type="text" placeholder="Merchant">
-        <input class="nameIn" type="text" placeholder="Name">
-        <button onclick="pay()">Pay</button>
+      <input class="rupeIn" type="number" placeholder="Amount" />
+      <input class="merIn" type="text" placeholder="Merchant" />
+      <input class="nameIn" type="text" placeholder="Name" />
+      <button onclick="pay()">Pay</button>
+      <button onclick="gotoQr()">scan</button>
     </div>
     <div class="videobox">
-        <video onclick="play()" class="gvideo" autoplay loop muted src="ganimatoin.mp4"></video>
+      <video
+        onclick="play()"
+        class="gvideo"
+        autoplay
+        loop
+        muted
+        src="ganimatoin.mp4"
+      ></video>
     </div>
     <div class="page">
-        <div class="circle">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="#fff" viewBox="0 0 448 512"><path d="M438.6 105.4C451.1 117.9 451.1 138.1 438.6 150.6L182.6 406.6C170.1 419.1 149.9 419.1 137.4 406.6L9.372 278.6C-3.124 266.1-3.124 245.9 9.372 233.4C21.87 220.9 42.13 220.9 54.63 233.4L159.1 338.7L393.4 105.4C405.9 92.88 426.1 92.88 438.6 105.4H438.6z"/></svg>
-        </div>
-        <div class="info">
-                <h2 class="rupees">₹ 40.00</h2>
-                <p class="service">Paid to Paytm Merchant</p>
-                <p class="name">Kabeer</p>
-        </div>
-        <div class="footer">
-            <p class="time"> April 27, 2022 6:49 PM</p>
-            <button onclick="show()">Got it</button>
-        </div>
+      <div class="circle">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="#fff"
+          viewBox="0 0 448 512"
+        >
+          <path
+            d="M438.6 105.4C451.1 117.9 451.1 138.1 438.6 150.6L182.6 406.6C170.1 419.1 149.9 419.1 137.4 406.6L9.372 278.6C-3.124 266.1-3.124 245.9 9.372 233.4C21.87 220.9 42.13 220.9 54.63 233.4L159.1 338.7L393.4 105.4C405.9 92.88 426.1 92.88 438.6 105.4H438.6z"
+          />
+        </svg>
+      </div>
+      <div class="info">
+        <h2 class="rupees">₹ 40.00</h2>
+        <p class="service">Paid to Paytm Merchant</p>
+        <p class="name">Kabeer</p>
+      </div>
+      <div class="footer">
+        <p class="time">April 27, 2022 6:49 PM</p>
+        <button onclick="show()">Got it</button>
+      </div>
     </div>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
