--- a/qr.html
+++ b/qr.html
@@ -7,6 +7,9 @@
     <body>
       <div id="close"><img src="icon/close.svg" alt=""></div>
       <div id="qr-reader"></div>
+      <div id="overlay">
+        <div id="border"> <img id="roundB" src="icon/transparent.png" alt=""> <img id="bimg" src="icon/border.png" alt=""></div>
+      </div>
       <div id="gallery"><img src="icon/image.svg" alt="">Upload from gallery</div>
       <script src="qr.js"></script>
     </body>
