--- a/qr.html
+++ b/qr.html
@@ -5,7 +5,7 @@
     <script src="qrcode.js"></script>
   </head>
     <body>
-      <div id="close"><img src="icon/close.svg" alt=""></div>
+      <div id="close"> <a href="index.html"><img src="icon/close.svg" alt=""></a></div>
       <div id="qr-reader"></div>
       <div id="overlay">
         <div id="border"> <img id="roundB" src="icon/transparent.png" alt=""> <img id="bimg" src="icon/border.png" alt=""></div>
