--- a/qr.html
+++ b/qr.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Html-Qrcode Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=.5" />
     <link rel="stylesheet" href="qr.css" />
     <script src="qrcode.js"></script>
   </head>
