--- a/qr.html
+++ b/qr.html
@@ -10,6 +10,11 @@
       <div id="qr-reader"></div>
       <div id="overlay">
         <div id="border"> <img id="roundB" src="icon/transparent.png" alt=""> <img id="bimg" src="icon/border.png" alt=""></div>
+        <div id="footer">
+          <div class="line"></div>
+          <div class="footer-item">Scan any QR code to pay</div>
+          <div class="footer-item" style="color: #9AA0A6;" >Google Pay ● PhonePe ● PayTM ● UPI</div>
+        </div>
       </div>
       <div id="gallery"><img src="icon/image.svg" alt="">Upload from gallery</div>
       <script src="qr.js"></script>
