qr reader updated

--- a/qr.html
+++ b/qr.html
@@ -14,6 +14,7 @@
           <div class="line"></div>
           <div class="footer-item">Scan any QR code to pay</div>
           <div class="footer-item" style="color: #9AA0A6;" >Google Pay ● PhonePe ● PayTM ● UPI</div>
+          <div id="bottom"></div>
         </div>
       </div>
       <div id="gallery"><img src="icon/image.svg" alt="">Upload from gallery</div>
