feature added copy text from clipboard

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="home-page">
+      <input  id="qrinput" spellcheck="false" type="text" placeholder="Qr input" > </input>
       <input class="rupeIn" type="number" placeholder="Amount" />
       <input class="merIn" spellcheck="false" type="text" placeholder="Merchant" />
       <input class="nameIn" spellcheck="false" type="text" placeholder="Name" />
